--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,14 @@ GCP_PROJECT_ID=your-project-id
 GCP_REGION=us-central1
 VERTEX_AI_AGENT_ENDPOINT=
 
+# Database (Cloud SQL PostgreSQL)
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=trading_intelligence
+DB_USER=postgres
+DB_PASSWORD=your-password
+DATABASE_URL=postgresql://postgres:your-password@localhost:5432/trading_intelligence
+
 # API Configuration
 API_V1_PREFIX=/api/v1
 PROJECT_NAME=Trading Intelligence API
@@ -11,7 +19,10 @@ PROJECT_NAME=Trading Intelligence API
 CORS_ORIGINS=http://localhost:3000,http://localhost:8080
 
 # Data Path
-DATA_PATH=./data/raw
+DATA_PATH=../data/raw
 
 # Demo Mode
 DEMO_MODE=true
+
+# Gemini Configuration
+GOOGLE_APPLICATION_CREDENTIALS=/path/to/your/service-account-key.json
