--- a/agents-service/.env.example
+++ b/agents-service/.env.example
@@ -17,3 +17,10 @@ LOG_LEVEL=INFO
 
 # CORS (for development)
 CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+
+# MCP servers
+MCP_TRADE_SERVER_URL=http://localhost:3001
+MCP_RISK_SERVER_URL=http://localhost:3002
+MCP_MARKET_SERVER_URL=http://localhost:3003
+MCP_NEWS_SERVER_URL=http://localhost:3004
+MCP_CLIENT_SERVER_URL=http://localhost:3005
