--- a/mcp-servers/client/Dockerfile
+++ b/mcp-servers/client/Dockerfile
@@ -2,21 +2,12 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copy requirements and install
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy server code
 COPY server.py .
+COPY data/ ./data/
 
-# Create data directory
-RUN mkdir -p /app/data
+ENV PORT={config['port']}
 
-# Copy mock data if exists
-COPY data/ /app/data/ 2>/dev/null || true
-
-# Expose port
-EXPOSE 8080
-
-# Run server
 CMD ["python", "server.py"]
