--- a/agents-service/Dockerfile
+++ b/agents-service/Dockerfile
@@ -1,30 +1,14 @@
 FROM python:3.11-slim
 
-# Set working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    postgresql-client \
-    && rm -rf /var/lib/apt/lists/*
+# Copy shared directory from context root
+COPY shared/ /app/shared/
 
-# Copy shared contracts first
-COPY ../shared /app/shared
-
-# Copy requirements and install dependencies
-COPY requirements.txt .
+# Copy agents-service files
+COPY agents-service/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY . .
+COPY agents-service/ .
 
-# Expose port
-EXPOSE 8001
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8001/health')"
-
-# Run the application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
