--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
+      - ./database/schema.sql:/docker-entrypoint-initdb.d/init.sql  # ← ADD THIS
       - postgres_data:/var/lib/postgresql/data
 
 volumes:
